--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "http-status": "^1.4.2",
+    "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "mysql2": "^2.2.5",
     "pg": "^8.3.3",
+    "sanitize-html": "^2.7.0",
     "sequelize": "^6.3.5",
     "slugify": "^1.6.5",
     "structure": "^2.0.1"
