--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
   "dependencies": {
     "awilix": "^4.2.6",
     "awilix-express": "^3.0.0",
-    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "chai-change": "^2.1.2",
     "compression": "^1.7.4",
@@ -27,9 +26,9 @@
     "dirty-chai": "^2.0.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "helmet": "^5.1.0",
     "http-status": "^1.4.2",
     "joi": "^17.6.0",
-    "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "mysql2": "^2.2.5",
     "pg": "^8.3.3",
