--- a/.env.example
+++ b/.env.example
@@ -2,8 +2,6 @@ NODE_ENV=development
 APP_DEBUG=true
 APP_URL=http://localhost
 APP_PORT=6969
-APP_KEY=RandomString
-APP_JWT_TTl=3600
 
 # Database
 DB_DIALECT=postgresql
@@ -12,3 +10,10 @@ DB_PORT=3306
 DB_DATABASE=node_ddd
 DB_USERNAME=root
 DB_PASSWORD=password
+
+# Redis
+REDIS_HOST=localhost
+REDIS_PORT=6380
+REDIS_PASSWORD=root
+REDIS_USERNAME=root
+REDIS_DATABASE=0
