--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "morgan": "^1.10.0",
     "mysql2": "^2.2.5",
     "pg": "^8.3.3",
+    "redis": "^4.1.0",
     "sanitize-html": "^2.7.0",
     "sequelize": "^6.3.5",
     "slugify": "^1.6.5",
