--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,18 +1,20 @@
 version: '3.8'
 services:
   db:
-    image: postgres:14.1-alpine
+    image: postgres:12-alpine
     restart: always
     environment:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_USER=root
+      - POSTGRES_PASSWORD=secret
+    tty: true
     ports:
       - '5432:5432'
     volumes:
       - db:/var/lib/postgresql/data
-      - ./db/init.sql:/docker-entrypoint-initdb.d/create_tables.sql
+      - ./docker/db/:/docker-entrypoint-initdb.d/
   cache:
     image: redis:7.0.2-alpine
+    container_name: news-cache
     restart: always
     ports:
       - '6379:6379'
@@ -20,23 +22,25 @@ services:
     volumes:
       - cache:/data
   api:
-    container_name: quotes-api
+    container_name: news-api
     build:
-      context: ./
-      target: production
-    image: quotes-api
+      context: .
     depends_on:
       - db
       - cache
     ports:
-      - 3000:3000
+      - 3301:3300
     environment:
-      NODE_ENV: production
+      NODE_ENV: development
+      APP_DEBUG: true
+      APP_URL: http://localhost
+      APP_PORT: 3300
       DB_HOST: db
       DB_PORT: 5432
-      DB_USER: postgres
-      DB_PASSWORD: postgres
-      DB_NAME: postgres
+      DB_USERNAME: root
+      DB_PASSWORD: secret
+      DB_DATABASE: news_api
+      DB_DIALECT: postgres
       REDIS_HOST: cache
       REDIS_PORT: 6379
       REDIS_PASSWORD: eYVX7EwVmmxKPCDmwMtyKVge8oLd2t81
@@ -44,7 +48,8 @@ services:
       - db
       - cache
     volumes:
-      - ./:/src
+      - ./docker/volume/api:/src
+
 volumes:
   db:
     driver: local
