--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,18 @@
 NODE_ENV=development
 APP_DEBUG=true
 APP_URL=http://localhost
-APP_PORT=6969
+APP_PORT=3300
 
 # Database
 DB_DIALECT=postgresql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=node_ddd
+DB_HOST=127.0.0.1 # "db" if using docker
+DB_PORT=5432
+DB_DATABASE=news_api
 DB_USERNAME=root
-DB_PASSWORD=password
+DB_PASSWORD=secret
 
 # Redis
-REDIS_HOST=localhost
-REDIS_PORT=6380
-REDIS_PASSWORD=root
+REDIS_HOST=127.0.0.1 # "cache" if using docker
+REDIS_PORT=6379
+REDIS_PASSWORD=eYVX7EwVmmxKPCDmwMtyKVge8oLd2t81
 REDIS_USERNAME=root
-REDIS_DATABASE=0
