adjust some changes

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -36,9 +36,10 @@ services:
       - db
       - cache
     volumes:
-      - type: bind
-        source: .
-        target: /app
+      - ./:/app
+#      - type: bind
+#        source: .
+#        target: /app
 
 volumes:
   db:
