add branch in github action unit test

--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -2,11 +2,14 @@ name: node-ddd-develop
 
 on:
   pull_request:
-    branches: develop
+    branches:
+      - develop
+      - master
 
   push:
     branches:
       - develop
+      - master
 
 jobs:
   test:
